--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="sec-img">
-            <img src="./images/picture1.png" alt=""style width="650px" height="650px">
+            <img src="images/picture1.png" alt=""style width="650px" height="650px">
         </div>
     </section>
 
