--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         <footer>
 
             <div class="social-links">
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="https://t.me@abdurasulovaslbek"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-telegram"></i></a>
